--- a/style.css
+++ b/style.css
@@ -41,10 +41,11 @@ body{
 .sec{
     width: 230px;
     height: 230px;
-    background: red;
+    /* background: red; */
     display: flex;
     justify-content: center;
-    transform: rotateZ(30deg);
+    /* transform: rotateZ(30deg); */
+    position: absolute;
 
 }
 .sec::before{
@@ -52,6 +53,46 @@ body{
     background: green;
     width: 2px;
     height: 150px;
+    border-radius: 5px 5px 0 0 ;
+    position: absolute;
+    z-index: 3;
+}
+
+.min{
+    width: 200px;
+    height: 200px;
+    /* background: red; */
+    display: flex;
+    justify-content: center;
+    /* transform: rotateZ(30deg); */
+    position: absolute;
+
+}
+.min::before{
+    content: "";
+    background: blueviolet;
+    width: 4px;
+    border-radius: 5px 5px 0 0 ;
+    height: 100px;
+    position: absolute;
+    z-index: 3;
+}
+.hour{
+    width: 170px;
+    height: 170px;
+    /* background: red; */
+    display: flex;
+    justify-content: center;
+    /* transform: rotateZ(30deg); */
+    position: absolute;
+
+}
+.hour::before{
+    content: "";
+    background: rgb(146, 75, 75);
+    width: 6px;
+    border-radius: 5px 5px 0 0 ;
+    height: 90px;
     position: absolute;
     z-index: 3;
 }
